{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 52,
  "lineage": "fdae3341-c0c9-f8c2-ed7f-10d499019f9a",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_apache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:761371183724:loadbalancer/app/tf-alb-pvt/02d25bddc6988f3b",
            "arn_suffix": "app/tf-alb-pvt/02d25bddc6988f3b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-tf-alb-pvt-1587659569.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:761371183724:loadbalancer/app/tf-alb-pvt/02d25bddc6988f3b",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-alb-pvt",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0aaecf5e32e28a981"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04c622b1c9b83f220"
              },
              {
                "subnet_id": "subnet-0c6c9554d2c36f4fa"
              }
            ],
            "subnets": [
              "subnet-04c622b1c9b83f220",
              "subnet-0c6c9554d2c36f4fa"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "alb-private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "alb-private"
            },
            "vpc_id": "vpc-0b557f9b08bd8e67e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alb.aws_security_group.sg_alb_pvt",
            "module.subnets.aws_subnet.subnet_apache1",
            "module.subnets.aws_subnet.subnet_apache2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_alb_pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761371183724:security-group/sg-0aaecf5e32e28a981",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aaecf5e32e28a981",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTP connections",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230713004422012700000002",
            "name_prefix": "terraform-",
            "owner_id": "761371183724",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "tf-sg-alb-pvt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-sg-alb-pvt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b557f9b08bd8e67e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_apache1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761371183724:security-group/sg-0337baa76a6c47664",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0337baa76a6c47664",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTP connections",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230713004629150500000004",
            "name_prefix": "terraform-",
            "owner_id": "761371183724",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "tf-sg-apache1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-sg-apache1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b557f9b08bd8e67e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb_apache",
            "module.alb.aws_security_group.sg_alb_pvt",
            "module.subnets.aws_subnet.subnet_apache1",
            "module.subnets.aws_subnet.subnet_apache2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_apache2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761371183724:security-group/sg-0f7a76d191759fb6a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7a76d191759fb6a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTP connections",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230713004629154500000005",
            "name_prefix": "terraform-",
            "owner_id": "761371183724",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "tf-sg-apache2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-sg-apache2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b557f9b08bd8e67e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb_apache",
            "module.alb.aws_security_group.sg_alb_pvt",
            "module.subnets.aws_subnet.subnet_apache1",
            "module.subnets.aws_subnet.subnet_apache2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761371183724:security-group/sg-0a75a1b8beef8285a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a75a1b8beef8285a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTP connections",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTPS connections",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming SSH connections",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230713004629159100000006",
            "name_prefix": "terraform-",
            "owner_id": "761371183724",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "tf-sg-nginx1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-sg-nginx1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b557f9b08bd8e67e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb_apache",
            "module.alb.aws_security_group.sg_alb_pvt",
            "module.subnets.aws_subnet.subnet_apache1",
            "module.subnets.aws_subnet.subnet_apache2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761371183724:security-group/sg-01494f706698edf16",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01494f706698edf16",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTP connections",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTPS connections",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming SSH connections",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230713004629159100000007",
            "name_prefix": "terraform-",
            "owner_id": "761371183724",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "tf-sg-nginx2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-sg-nginx2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b557f9b08bd8e67e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb_apache",
            "module.alb.aws_security_group.sg_alb_pvt",
            "module.subnets.aws_subnet.subnet_apache1",
            "module.subnets.aws_subnet.subnet_apache2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b21ce62f3452efcf",
            "association_id": "eipassoc-01589a9caef496291",
            "domain": "vpc",
            "id": "eipalloc-0b21ce62f3452efcf",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a7bb1ada97709a2a",
            "private_dns": "ip-10-0-0-72.ec2.internal",
            "private_ip": "10.0.0.72",
            "public_dns": "ec2-3-223-71-168.compute-1.amazonaws.com",
            "public_ip": "3.223.71.168",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_apache1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761371183724:subnet/subnet-0c6c9554d2c36f4fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6c9554d2c36f4fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "761371183724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "tf-subnet-apache1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-subnet-apache1"
            },
            "vpc_id": "vpc-0b557f9b08bd8e67e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_apache2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761371183724:subnet/subnet-04c622b1c9b83f220",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c622b1c9b83f220",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "761371183724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "tf-subnet-apache2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-subnet-apache2"
            },
            "vpc_id": "vpc-0b557f9b08bd8e67e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761371183724:subnet/subnet-04f905313062cd436",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f905313062cd436",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "761371183724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "tf-subnet-nginx1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-subnet-nginx1"
            },
            "vpc_id": "vpc-0b557f9b08bd8e67e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761371183724:subnet/subnet-052c44401fa2dda55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052c44401fa2dda55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "761371183724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "tf-subnet-nginx1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-subnet-nginx1"
            },
            "vpc_id": "vpc-0b557f9b08bd8e67e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761371183724:vpc/vpc-0b557f9b08bd8e67e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04f27ab66f61cbb67",
            "default_route_table_id": "rtb-0c7d97bb79bf343dc",
            "default_security_group_id": "sg-0ae72051f7a824e01",
            "dhcp_options_id": "dopt-011f9119938e2ca54",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b557f9b08bd8e67e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c7d97bb79bf343dc",
            "owner_id": "761371183724",
            "tags": {
              "Environment": "dev",
              "Name": "tf-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-vpc"
            }
          }
        }
      ]
    }
  ]
}